--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/emails/email_order_confirmation.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/emails/email_order_confirmation.htm
@@ -79,17 +79,8 @@ jemand an der angeführten Lieferadresse erreichbar ist!</font></b></p>
     Bankleitzahl: 20320 Konto Nr. 32100-253304<br />
     IBAN: AT082032032100253304<br />
     SWIFT-BIC: ASPKAT2LXXX<br />
-    <br />
-    B</span></font><span style='font-size: 9pt; font-family: Verdana'><font face='Arial'>itte 
-    beachten Sie, dass die Versandkostenpauschale von € 6,- nur für Lieferunge</font></span><font face="Verdana" size="2"><span class='spelle'><span style="font-size: 9pt; font-family: Arial">n 
-    innerhalb Österreichs und nach Deutschland gilt (Davon ausgenommen sind 
-Produkte, bei welchen höhere Versandkosten explizit ausgewiesen sind. Bei diesen 
-Produkten gelten die ausgewiesenen Versandkosten und nicht die 
-Versandkostenpauschale). 
-    Die Kosten für den Versand in alle anderen Länder sind
-    gewichtsabhängig. Sie erhalten daher von uns nochmals eine gesonderte
-    Auftragsbestätigung, die die genauen 
-    Versandkosten be</span></span></font><span style='font-size: 9pt; font-family: Verdana'><font face='Arial'>inhaltet!<br />
+    </span></font><span style='font-size: 9pt; font-family: Verdana'>
+<font face='Arial'>
     <br />
     Sollten Sie die Zahlungsvariante <b><i>
     <span style='FONT-WEIGHT: bold; FONT-STYLE: italic'>PAYPAL</span></i></b> 
@@ -108,9 +99,18 @@ weiteren Informationen! <br />
     Die Firma Pro's 
 Pro Versand GmbH liefert ausschließlich auf 
     Grundlage der aktuell gültigen
-    <a title='http://www.diskontcomputer.com/' href='http://www.arfaian.com/download/AGB.pdf'>
-    Allgemeinen Geschäftsbedingungen</a>. <br />
-    Angebot gültig solange der Vorrat reicht. Irrtümer und Änderungen 
+    <a title="http://www.diskontcomputer.com/" href="http://www.pros-pro.com/download/agb.pdf">Allgemeinen Geschäftsbedingungen</a>. 
+<br>
+</span><span style="font-size: 9pt; font-family: Arial">
+<font style="font-size: 9pt; font-family: Arial">Informationen, die als PDF 
+Datei angehängt sind, können Sie mit folgender kostenloser Software zum Öffnen 
+einer PDF-Datei öffnen und ausdrucken:<br>
+Adobe Acrobat Reader © (Download: </font>
+<a href="http://get.adobe.com/de/reader/">http://get.adobe.com/de/reader/</a><span style="font-family: Arial; font-size: 9pt"><font style="font-size: 9pt; font-family: Arial">)</font></span></span></font></p>
+<p>
+
+<font face='Verdana' color='black' size='2'>
+    <span style='FONT-SIZE: 9pt; FONT-FAMILY: Arial'>Angebot gültig solange der Vorrat reicht. Irrtümer und Änderungen 
     vorbehalten.</span></font></p>
 <p>
 
