--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/account/myAccount_Information.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/account/myAccount_Information.htm
@@ -135,8 +135,7 @@
                                                                                 <IMG height=13 src="../images/button/doc.gif" width=11 border=0></b>
                                                                         </td>
                                                                         <td width="255" height="13">
-                                                                            &nbsp;
-                                                                            Mein Passwort hier <A href="default.aspx?PageToShow=ChangePassword">ändern</a>
+                                                                            &nbsp;Mein Passwort hier <A href="default.aspx?PageToShow=ChangePassword">ändern</a>
                                                                         </td>
                                                                     </tr>
                                                                     <tr>
@@ -250,7 +249,7 @@
                   id="AutoNumber77">
                                                         <tr>
                                                             <td width="100%" bgcolor="#f3f3f3">
-                                                                <b><font color="#666666">&nbsp;Lieferungsadresse</font></b>
+                                                                <b><font color="#666666">&nbsp;abweichende Lieferadresse</font></b>
                                                             </td>
                                                         </tr>
                                                         <tr>
