--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/basket/warenkorb_login.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/basket/warenkorb_login.htm
@@ -125,8 +125,8 @@
                     color="#DB0F21" size="1"><b>[TRANSLATION:PASSWORT VERGESSEN]</b></font><font face="Verdana, Tahoma, Arial, Helvetica"
                         color="black" size="1"><br />
                         <br />
-                        Falls sich Ihre E-Mail Adresse geändert hat, informieren Sie uns bitte unter: <a href="mailto:online@pros-pro.com?subject=email_changes">
-                            online@pros-pro.com</a><br />
+                        Falls sich Ihre E-Mail Adresse geändert hat, können Sie 
+				diese in Ihrem Kundenkonto aktualisieren.<br />
                         <br />
                         Sollten Sie Ihr Passwort vergessen haben, füllen sie bitte das Formular aus.<br />
                         &nbsp;</font><table border="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse"
