--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_AGB.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_AGB.htm
@@ -22,17 +22,18 @@
                             <table border='0' width='96%' id='table30' cellspacing='0' cellpadding='0'>
                                 <tr>
                                     <td>
-                                        <font face="Verdana" size="2">
-										<a target="_blank" href="http://www.pros-pro.com/download/agb.pdf">Allgemeine Geschäftsbedingungen zum DOWNLOAD</a></font><font size='1'><b><span style='font-family: Verdana;
-                                                text-decoration: none'><br />
-                                                <br />
-                                            </span></b></font><i><b><span style='font-family: Verdana; text-decoration: none'><font
+                                        <p align="right">
+										<font face="Verdana" size="2">
+										<a target="_blank" href="http://www.pros-pro.com/download/agb.pdf">
+										AGB &amp; Infos als PDF Download</a></font></p>
+										<p align="left"><i><b><span style='font-family: Verdana; text-decoration: none'><font
                                                 size='5'>A</font></span><span style='font-family: Verdana'><font size='5'>llgemeine
                                                     Geschäftsbedingungen</font></span></b></i><font face='Verdana'><br />
                                                         <br />
                                                     </font><b>
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-										L i e f e r u n g</span></b><p class="MsoNormal" style="text-autospace: none">
+										L i e f e r u n g</span></b></p>
+										<p class="MsoNormal" style="text-autospace: none">
 										<span style="font-size: 9.0pt; line-height: 115%; font-family: Arial,sans-serif">
 										In Österreich kann die Zahlung per 
 										Nachnahme oder mittels Vorauszahlung 
@@ -88,8 +89,8 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										Annahme kommt der Vertrag zustande.</span></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-										&nbsp;<b>W i d e r r u f s r e c h t </b>
-										</span></p>
+										&nbsp;<b>W i d e r r u f s r e c h t&nbsp; 
+										des Kunden</b></span></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<i>
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
@@ -119,15 +120,17 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										berechtigt, hierfür eine Vergütung zu 
 										verlangen. Ferner sind Sie verpflichtet, 
 										die Wertminderung zu ersetzen, falls die 
-										Ware durch Sie beschädigt wurde.<br>
-										<br>
-										<br>
-										<b><i><u>Widerrufsbelehrung (für 
-										deutsche Verbraucher)</u></i></b></span></p>
+										Ware durch Sie beschädigt wurde.</span></p>
 										<p class="MsoNormal" style="line-height: normal">
-										<b>
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-										Widerrufsrecht</span></b></p>
+										<br>
+										</span><b>
+										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
+										Widerrufsrecht (für deutsche 
+										Verbraucher)</span></b></p>
+										<p class="MsoNormal" style="line-height: normal">
+										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
+										<b><i><u>Widerrufsbelehrung</u></i></b></span></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
 										Sie können Ihre Vertragserklärung 
@@ -153,14 +156,15 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										ist zu richten an:&nbsp;&nbsp;</span></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-										Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Pros Pro 
-										Versand GmbH<br>
+										Name&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+										Pro's Pro Versand GmbH<br>
 										Anschrift:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Fröbelstraße 24, 
 										A-4020 Linz, Austria <br>
 										Telefax:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-										+ 43 (0) 732 660202<br>
+										+ 43 (0) 732 660101-40<br>
 										E-Mail:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-										rma@pros-pro.com</span></p>
+										<a href="mailto:rma@pros-pro.com?subject=Widerruf">
+										rma@pros-pro.com</a></span></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<b>
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
@@ -229,14 +233,27 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
 										Adresse für Rücksendungen</span></b></p>
 										<p class="MsoNormal" style="line-height: normal">
-										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-										Pros Pro Versand GmbH<br>										
+										<span style="font-family: Arial,sans-serif; font-size: 9pt">
+										Pro's Pro Versand GmbH</span><span style="font-size: 9.0pt; font-family: Arial,sans-serif"><br>
 										Fröbelstr. 24<br>
 										4020 Linz<br>
 										Österreich</span></p>
 										<p class="MsoNormal" style="line-height: normal">
-										<b>
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
+										UNFREIE SENDUNGEN WERDEN NICHT 
+										ANGENOMMEN<br>
+										<br>
+										Im Gewährleistungsfall senden Sie uns 
+										bitte eine Email an
+										<a href="mailto:rma@pros-pro.com?subject=Reklamation">
+										rma@pros-pro.com</a> unter Angabe der 
+										Rechnungsnummer, des Artikels sowie 
+										einer Fehlerbeschreibung. Wir werden die 
+										Abholung des Pakets bei Ihnen 
+										veranlassen.<br>
+										</span><b>
+										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
+										<br>
 										G e w ä h r l e i s t u n g</span></b></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
@@ -251,15 +268,16 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										Wir bitten um Verständnis dafür, dass 
 										wir auf Grund unserer äußerst knapp 
 										kalkulierten Preise Bestellungen unter € 
-										42,- (ohne Versandkosten) nicht 
+										36,- (ohne Versandkosten) nicht 
 										bearbeiten können. &nbsp;</span></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<b>
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
 										C o p y r i g h t</span></b></p>
 										<p class="MsoNormal" style="line-height: normal">
+										<span style="font-family: Arial,sans-serif; font-size: 9pt">
+										Pro's Pro Versand GmbH. </span>
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-										Pros Pro Versand GmbH 
 										Alle Rechte vorbehalten. Das Downloaden 
 										von Bildern und Texten ist nur nach 
 										vorheriger schriftlicher Genehmigung 
@@ -275,27 +293,15 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
 										A-4020 Linz<br>
 										Firmenbuchnummer: 394778 g<br>
 										Firmenbuchgericht: Landesgericht Linz<br>
-										Umsatzsteuer-Identifikationsnummer: ATU 
-										67883926<br>
-										Geschäftsführer: Manuel Ertl<br></span>
-										<b>
-										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-										<br>
-										G e r i c h t s s t a n d o r t</span></b></p>
-										<p class="MsoNormal" style="line-height: normal">
-										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-										Im Falle von Vertragsstreitigkeiten mit
-										<b>gewerblichen Abnehmern</b> oder <b>
-										Unternehmern</b> gilt der 
-										Gerichtsstandort Linz, Österreich. Es 
-										gilt Österreichisches Recht.</span></p>
+										Umsatzsteuer-Identifikationsnummer: ATU67883926<br>
+										Geschäftsführer: Manuel Ertl</span></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<b>
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
 										Ö f f n u n g s z e i t e n :</span></b></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-										Montag - Freitag: 10:00 - 18:00 Uhr</span></p>
+										Montag - Freitag: 10:00 - 17:00 Uhr</span></p>
 										<p class="MsoNormal" style="line-height: normal">
 										<b>
 										<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
@@ -327,7 +333,7 @@ color:black">Die Preise verstehen sich inklusive Mehrwertsteuer, zuzüglich
                                                     <br />
                                                     <br />
                                                     <br />
-                                                    <a href="http://www.pros-pro.com/download/AGB.pdf">Klicken Sie hier um die AGB's
+                                                    <a href="http://www.arfaian.com/download/AGB.pdf">Klicken Sie hier um die AGB's
                                                         zu downloaden.</a><br />
                                                     <br />
                                                 </font>
