--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/basket/warenkorb_functions.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/basket/warenkorb_functions.htm
@@ -1,10 +1,9 @@
 <p align="center">
     <span style="font-family: Verdana; color: red; font-weight: 700"><font size="1">Wir
-        bitten um Verständnis, dass wir auf Grund unserer äußerst knapp kalkulierten Preise
-        Bestellungen </font>unter € 42,-<font size="1"> (ohne Versandkosten) nicht bearbeiten
+        bitten um Verständnis, dass wir auf Grund unserer äußerst knapp kalkulierten Preise<br>
+	Bestellungen </font>unter € 36,-<font size="1"> (inklusive 
+	gesetzlicher Mehrwertsteuer / exklusive Versandkosten) nicht bearbeiten
             können!</font></span></p>
 <p align="center">
-    <span style="font-family: Verdana; color: red; font-weight: 700"><font size="1">Versandkosten
-        in alle anderen Länder teilen wir gerne auf Anfrage mit / on request we will inform
-        you about shipping charges to all other countries </font></span>
-</p>
+    <a href="http://www.pros-pro.com/download/lieferung.pdf" target="_blank">
+	<img border="0" src="http://www.pros-pro.com/skins/skin_arfaian_2009/images/boxes/aktion.gif" width="180" height="95"></a></p>
