--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/newsletterForm.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/newsletterForm.htm
@@ -8,9 +8,7 @@
               <td width="200" align="right" border="0">
                 <p align="left">Newsletter*:
                  <select name="Interest" size="1">
-                  <option selected=true>Produkt [Bezeichnung]</option>
-                  <option>neue Produkte</option>
-                  <option>günstige Angebote</option>
+                  <option selected=true>laufende Angebote</option>
                 </select>
               </td>
             </tr>
