--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_GESETZ.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_GESETZ.htm
@@ -67,10 +67,12 @@
 		Wertminderung zu ersetzen, falls die Ware durch Sie beschädigt wurde.<br>
 		<br>
 		<br>
-		<b><i><u>Widerrufsbelehrung (für deutsche Verbraucher)</u></i></b></span></p>
+		</span><b><i><u>
+		<span style="font-size: 9.0pt; font-family: Arial,sans-serif">Widerrufsrecht 
+		(für deutsche Verbrau</span></u></i></b><u><i><b><span style="font-size: 9.0pt; font-family: Arial,sans-serif">cher)</span></b></i></u></p>
 		<p class="MsoNormal" style="line-height: normal"><b>
 		<span style="font-size: 9.0pt; font-family: Arial,sans-serif">
-		Widerrufsrecht</span></b></p>
+		Widerrufsbelehrung </span></b></p>
 		<p class="MsoNormal" style="line-height: normal">
 		<span style="font-size: 9.0pt; font-family: Arial,sans-serif">Sie können 
 		Ihre Vertragserklärung innerhalb von 14 Tagen ohne Angabe von Gründen in 
