--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/emails/email_registration_confirmation.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/emails/email_registration_confirmation.htm
@@ -20,7 +20,7 @@ Falls Sie noch Fragen haben, bzw. weitere Information benoetigen,&nbsp;koennen S
 info@pros-pro.com</a> oder 0043 732 660101 kontaktieren.&nbsp;<br />
 <br />
 
-Viel Spass beim Einkaufen wuenscht Ihnen Ihr pros-pro.com Team!</span></font></p>
+Viel Spass beim Bestellen wuenscht Ihnen Ihr pros-pro.com Team!</span></font></p>
 <p>
 
 <span style='font-size: 10pt; font-family: Verdana'>
