--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_warenkorbStep2.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_warenkorbStep2.htm
@@ -38,4 +38,9 @@
     </center>
 </div>
 <p align="center">
+    &nbsp;</p>
+<p align="center">
+    [EMBED:basket/warenkorb_functions.htm]</p>
+<p align="center">
+    <br />
     [BASKET_RELATED_PRODUCTS]</p>
