--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_warenkorbstep5.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_warenkorbstep5.htm
@@ -1,7 +1,10 @@
+<p style="text-align: center">
+                [BODY]
+            </p>
 <div align="center">
  
 </div>
-<p>
+<p style="text-align: center">
     [BASKET_RELATED_PRODUCTS]</p>
 
      <!-- Google Code for Kaufentscheidung Conversion Page --> 
