--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/productPage_part_common.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/productPage_part_common.htm
@@ -313,6 +313,8 @@
 <div>
 SEO Link: <a href="[PRODUCT_SEO_LINK]">[PRODUCT_SEO_LINK]</a>
 <br />
+SEO Image: <a href="[PRODUCT_IMAGE_SEO_LINK]">[PRODUCT_IMAGE_SEO_LINK]</a>
+<br />
 Product ID: <span itemprop="productID">[ArtNr]</span>
 
 </div>
