--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/landSelection.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/landSelection.htm
@@ -1,5 +1,8 @@
-Select country: 
-<a href="default.aspx?l=AT&language=DEU"><img src="../images/icons/flag_austria.png" alt="Austria" border=0/></a>
+Sprache / Language: 
+<a href="default.aspx?l=AT&language=DEU">
+<img src="../images/icons/flag_germany.gif" alt="Deutsch" border=0/></a>
 <a href="default.aspx?language=ENG">
-<img src="../images/icons/flag_GB.png" alt="England" border=0/></a>
+<img src="../images/icons/flag_GB.png" alt="English" border=0/></a>
 <!--<a href="default.aspx?l=US&language=ENG"><img src="../images/icons/flag_usa.png" alt="USA" border=0/></a>-->
+<br>
+&nbsp;
